--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		/>
 	</head>
 	<body>
-		<header class="header">
+		<main class="main">
 		<div class="container__input">
 			<input type="text" class="input" id="marka" placeholder="Marka" />
 			<input type="text" class="input" id="model" placeholder="Model" />
@@ -32,7 +32,7 @@
 			
 			</table>
 		</div>
-		</header>
+		</main>
 		
 		<script src="myScript.js"></script>
 	</body>
