--- a/index.html
+++ b/index.html
@@ -16,23 +16,25 @@
 	</head>
 	<body>
 		<main class="main">
-		<div class="container__input">
-			<form id="my-form">
-			<input type="text" class="input" id="marka" placeholder="Marka" />
-			<input type="text" class="input" id="model" placeholder="Model" />
-			<input type="text" class="input" id="kolor" placeholder="Kolor" />
-			<button class="button" onclick="onClick()" type="button">Dodaj</button>
-		</form>
-		</div>
+			<div class="container__input">
+				<form id="my-form">
+					<input type="text" class="input" id="marka" placeholder="Marka" />
+					<input type="text" class="input" id="model" placeholder="Model" />
+					<input type="text" class="input" id="kolor" placeholder="Kolor" />
+					<button class="button" onclick="onClick()" type="button">
+						Dodaj
+					</button>
+				</form>
+			</div>
 			<div class="container__table">
-			<table id="table" class="styled__table" border="1">
-				<tr class="tr">
-					<th>Marka</th>
-					<th>Model</th>
-					<th>Kolor</th>
-				</tr>
-			</table>
-		</div>
+				<table id="table" class="styled__table" border="1">
+					<tr class="tr">
+						<th>Marka</th>
+						<th>Model</th>
+						<th>Kolor</th>
+					</tr>
+				</table>
+			</div>
 		</main>
 		<script src="myScript.js"></script>
 	</body>
