--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"/>
 	</head>
 	<body>
 		<main class="main">
@@ -27,7 +28,7 @@
 				</form>
 			</div>
 			<div class="container__table">
-				<table id="table" class="styled__table" border="1">
+				<table id="table" class="styled__table">
 					<tr class="tr">
 						<th>Marka</th>
 						<th>Model</th>
@@ -36,6 +37,10 @@
 				</table>
 			</div>
 		</main>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" 
+		integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+		crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 		<script src="myScript.js"></script>
 	</body>
 </html>
